# mortgage-monitor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: macro_dashboard_update.yml  update.yml
docs/: macro_dashboard.md
src/: __init__.py
src/macro_dashboard/: __init__.py  app.py
src/macro_dashboard/charts/: factory.py  registry.py
src/macro_dashboard/charts/components/: __init__.py  spread_chart.py  table_component.py
src/macro_dashboard/config/: settings.py
src/macro_dashboard/data/: loaders.py  registry.py
src/macro_dashboard/db/: models.py  session.py
src/macro_dashboard/services/: query.py
src/macro_dashboard/templates/: dashboard.py
src/mortgage_monitor/: __init__.py  app.py
src/mortgage_monitor/charts/: __init__.py  factory.py  lock_in.py  registry.py
src/mortgage_monitor/charts/components/: __init__.py  lock_in.py  mortgage_treasury.py  overview.py
src/mortgage_monitor/config/: __init__.py  settings.py
src/mortgage_monitor/data/: fetchers.py  sources.py
src/mortgage_monitor/templates/: __init__.py  dashboard.py
